# gex

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  aaa.txt  build.rs  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  release.yml
src/: branch.rs  command.rs  config.rs  debug.rs  highlight.rs  hunk.rs  main.rs  message_buffer.rs  minibuffer.rs  parse.rs  render.rs  status.rs
src/render/: mod.rs  renderer.rs  terminal.rs
