[package]
name = "gex"
version = "0.6.5-dev"
edition = "2021"
categories = ["command-line-utilities", "development-tools"]
description = "Git workflow improvement CLI tool inspired by Magit"
keywords = ["cli", "git", "workflow"]
exclude = [".github/", ".gitignore", "shell.nix"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Piturnah/gex"
homepage = "https://github.com/Piturnah/gex"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
crossterm = { version = "0.27.0", features = ["serde"] }
dirs = "5.0.1"
git2 = { version = "0.18.1", default-features = false }
itertools = "0.12.1"
nom = "7.1.3"
paste = "1.0.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_ignored = "0.1.10"
toml = "0.8.10"
vte = "0.13.0"

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
test-case = "3.3.1"

#       Tokee
#      (Gecko gekko)                _____________
#                            __,---'::.-  -::_ _ `-----.___      ______
#                        _,-'::_  ::-  -  -. _   ::-::_   .`--,'   :: .:`-._
#                     ,-'_ ::   _  ::_ .:   :: - _ .:   ::- _/ ::   ,-. ::. `-._
#                 _,-'   ::-  ::        ::-  _ ::  -  ::     |  .: ((|))      ::`.
#         ___,---'   ::    ::    ;::   ::     :.- _ ::._  :: \ :    `_____::..--'
#     ,-""  ::  ::.   ,------.  (.  ::  \  ::  ::  ,-- :. _  :`. ::  \       `-._
#   ,'     ::   '   _._.:_  :.)___,-------------._(.:: ____`-._ `._ ::`--...___; ;
#  ;:::. ,--'--"""""      /  /                     \. |     ``-----`''`---------'
# ;  `::;              _ /.:/_,                    _\.:\_,
# |    ;  jrei       ='-//\\--"                  ='-//\\--"
# `   .|               ''  ``                      ''  ``
#  \::'\
#   \   \
#    `..:`.
#      `.  `--.____
#        `-:______ `-._
#                 `---'`
#
#                   (gecko art found at https://ascii.co.uk/art)
