[package]
name = "gex"
version = "0.6.5-dev"
edition = "2021"
categories = ["command-line-utilities", "development-tools"]
description = "Git workflow improvement CLI tool inspired by Magit"
keywords = ["cli", "git", "workflow"]
exclude = [".github/", ".gitignore", "shell.nix"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Piturnah/gex"
homepage = "https://github.com/Piturnah/gex"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["cargo", "derive"] }
crossterm = { version = "0.28.1", features = ["serde"] }
dirs = "5.0.1"
git2 = { version = "0.19.0", default-features = false }
itertools = "0.13.0"
nom = "7.1.3"
paste = "1.0.15"
serde = { version = "1.0.206", features = ["derive"] }
serde_ignored = "0.1.10"
toml = "0.8.19"
vte = "0.13.0"

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
test-case = "3.3.1"

# Screenreader warning: The rest of this file is ascii art of a gecko.
#
#       Tokee
#      (Gecko gekko)                _____________
#                            __,---'::.-  -::_ _ `-----.___      ______
#                        _,-'::_  ::-  -  -. _   ::-::_   .`--,'   :: .:`-._
#                     ,-'_ ::   _  ::_ .:   :: - _ .:   ::- _/ ::   ,-. ::. `-._
#                 _,-'   ::-  ::        ::-  _ ::  -  ::     |  .: ((|))      ::`.
#         ___,---'   ::    ::    ;::   ::     :.- _ ::._  :: \ :    `_____::..--'
#     ,-""  ::  ::.   ,------.  (.  ::  \  ::  ::  ,-- :. _  :`. ::  \       `-._
#   ,'     ::   '   _._.:_  :.)___,-------------._(.:: ____`-._ `._ ::`--...___; ;
#  ;:::. ,--'--"""""      /  /                     \. |     ``-----`''`---------'
# ;  `::;              _ /.:/_,                    _\.:\_,
# |    ;  jrei       ='-//\\--"                  ='-//\\--"
# `   .|               ''  ``                      ''  ``
#  \::'\
#   \   \
#    `..:`.
#      `.  `--.____
#        `-:______ `-._
#                 `---'`
#
#                   (gecko art found at https://ascii.co.uk/art)
